# vibe-remote

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  RELAY_SERVER.md  SECURITY.md  package.json  pnpm-lock.yaml  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: adaptive_bitrate.rs  audio.rs  auth.rs  capture.rs  capture_windows.rs  connection.rs  encoder.rs  error.rs  h264_encoder.rs  input.rs  lib.rs  logging.rs  main.rs  nat_traversal.rs  protocol.rs  session.rs  transport.rs
src-tauri/tests/: integration_test.rs
src/lib/: design-system.css
src/lib/components/: ConnectPanel.svelte
src/lib/stores/: connection-history.svelte.ts  session.svelte.ts  settings.svelte.ts
src/lib/utils/: codec.ts
src/routes/: +layout.ts  +page.svelte
