[package]
name = "vibe-remote"
version = "0.1.0"
description = "A QUIC-powered Remote Desktop for the Modern Era"
authors = ["you"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "vibe_remote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# QUIC networking
quinn = { version = "0.11", features = ["runtime-tokio"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["std", "ring"] }
sha2 = "0.10"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Screen capture (macOS only for now - Windows DXGI pending)
screencapturekit = "1.4"

# Input injection
enigo = "0.2"

# Image processing for compression
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
flate2 = "1"

# Serialization for IPC
rmp-serde = "1"

# Time utilities - using default-features=false to avoid time crate (use chrono instead)
chrono = { version = "0.4", features = ["serde"], default-features = false }

# Video encoding - Hardware acceleration
core-video = "0.1"
core-foundation = "0.9"
video-toolbox-sys = { version = "0.2", features = ["helpers"] }

# Clipboard sync
arboard = "3"

# Directory paths
dirs = "5"

# STUN/TURN for NAT traversal
stun = "0.5"
turn = "0.8"

# Security - Ed25519 + Noise Protocol
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
snow = "0.9"
base64 = "0.22"
zeroize = "1"

# Bytes manipulation
bytes = "1"

# Audio capture
coreaudio-rs = "0.14"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
